--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.2.0",
     "@types/got": "^9.6.12",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.42",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
@@ -23,6 +24,7 @@
     "chrome-paths": "^1.0.1",
     "got": "^12.1.0",
     "hpagent": "^1.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "playwright": "^1.22.2"
   }
