--- a/config.json
+++ b/config.json
@@ -1,15 +1,17 @@
 {
     "3692": {
         "id": 3692,
-        "name": "Angelica Gleichner",
-        "gmail": "MartinDietrich4069430@gmail.com",
-        "pass": "T8FUQ38w",
-        "dateOfBirth": "3/4/1999",
+        "name": "Martina Alenka",
+        "gmail": "martinalenka241245@gmail.com",
+        "pass": "bui2dcvve@1",
+        "dateOfBirth": "3/4/1998",
         "userAgent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36",
         "mailKP": "miaooo.sl.ys.lyn.hyeon.lb@gmail.com",
-        "proxy": "45.12.149.20:6010:eyyaqyud:jwpw7et6mwlt",
-        "gender": "Male",
-        "timezone": "",
+        "proxy": "",
+        "gender": "2",
+        "timezone": "America/Los_Angeles",
+        "latitude": 34.0544,
+        "longitude": -118.2441,
         "cookies": ""
     }
 }
