chua co acc test

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "3692": {
         "id": 3692,
-        "name": "Martina Alenka",
-        "gmail": "martinalenka241245@gmail.com",
-        "pass": "bui2dcvve@1",
+        "name": "Nguyễn Trường Hà",
+        "gmail": "ntha241245@gmail.com",
+        "pass": "Ntha241245@1",
         "dateOfBirth": "3/4/1998",
         "userAgent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36",
         "mailKP": "miaooo.sl.ys.lyn.hyeon.lb@gmail.com",
@@ -12,6 +12,7 @@
         "timezone": "America/Los_Angeles",
         "latitude": 34.0544,
         "longitude": -118.2441,
-        "cookies": ""
+        "cookies": "",
+        "isLoginGmailGoogleSuccess": false
     }
 }
