--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "3692": {
         "id": 3692,
-        "name": "Nguyễn Trường Hà",
-        "gmail": "ntha241245@gmail.com",
-        "pass": "Ntha241245@1",
-        "dateOfBirth": "3/4/1998",
+        "name": "Bùi Doãn Hưng",
+        "gmail": "rightHere.Waitingforyou.lynbaek@gmail.com",
+        "pass": "Ilovethingthatmakeyousmile,Lynnguyen",
+        "dateOfBirth": "5/2/2000",
         "userAgent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36",
         "mailKP": "miaooo.sl.ys.lyn.hyeon.lb@gmail.com",
         "proxy": "",
@@ -13,6 +13,6 @@
         "latitude": 34.0544,
         "longitude": -118.2441,
         "cookies": "",
-        "isLoginGmailGoogleSuccess": false
+        "isLoginGmailGoogleSuccess": true
     }
 }
