--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "hpagent": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
-    "playwright": "^1.22.2"
+    "playwright": "^1.22.2",
+    "puppeteer": "^15.3.1",
+    "puppeteer-extra": "^3.3.1",
+    "puppeteer-extra-plugin-stealth": "^2.10.2"
   }
 }
